--- a/OmahVisual/nbproject/project.properties
+++ b/OmahVisual/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OmahVisual
+application.vendor=naray
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,81 @@ dist.jar=${dist.dir}/OmahVisual.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OmahVisual
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.9.4.jar=C:\\Users\\naray\\Downloads\\jar_files\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.2.jar=C:\\Users\\naray\\Downloads\\jar_files\\commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.2.jar=C:\\Users\\naray\\Downloads\\jar_files\\commons-collections4-4.2.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\naray\\Downloads\\jar_files\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\naray\\Downloads\\jar_files\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\commons-logging-1.1.jar
+file.reference.ecj-3.21.0.jar=C:\\Users\\naray\\Downloads\\jar_files\\ecj-3.21.0.jar
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\iText-2.1.7.js2.jar
+file.reference.jackson-annotations-2.15.3.jar=C:\\Users\\naray\\Downloads\\jar_files\\jackson-annotations-2.15.3.jar
+file.reference.jackson-core-2.15.3.jar=C:\\Users\\naray\\Downloads\\jar_files\\jackson-core-2.15.3.jar
+file.reference.jackson-databind-2.15.3.jar=C:\\Users\\naray\\Downloads\\jar_files\\jackson-databind-2.15.3.jar
+file.reference.jackson-dataformat-xml-2.15.3.jar=C:\\Users\\naray\\Downloads\\jar_files\\jackson-dataformat-xml-2.15.3.jar
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\jasperreports-5.6.0.jar
+file.reference.jasperreports-6.21.0.jar=C:\\Users\\naray\\Downloads\\jar_files\\jasperreports-6.21.0.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\naray\\Downloads\\jar_files\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\naray\\Downloads\\jar_files\\jfreechart-1.0.19.jar
+file.reference.mssql-jdbc-12.4.2.jre11-javadoc.jar=C:\\Users\\MacBook\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre11-javadoc.jar
+file.reference.mssql-jdbc-12.4.2.jre11-sources.jar=C:\\Users\\MacBook\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre11-sources.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar=C:\\Users\\ASUS\\Downloads\\sqljdbc_12.4.2.0_enu\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre11.jar
+file.reference.mssql-jdbc-12.4.2.jre11.jar-1=C:\\Users\\MacBook\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre11.jar
+file.reference.mssql-jdbc-12.4.2.jre8-javadoc.jar=C:\\Users\\MacBook\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre8-javadoc.jar
+file.reference.mssql-jdbc-12.4.2.jre8-sources.jar=C:\\Users\\MacBook\\Downloads\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre8-sources.jar
 file.reference.mssql-jdbc-12.4.2.jre8.jar=C:\\Users\\ASUS\\Downloads\\sqljdbc_12.4.2.0_enu\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre8.jar
+file.reference.mssql-jdbc-12.4.2.jre8.jar-1=C:\\Users\\naray\\Downloads\\sqljdbc_12.4.2.0_enu (1)\\sqljdbc_12.4\\enu\\jars\\mssql-jdbc-12.4.2.jre8.jar
+file.reference.mssql-jdbc-12.4.2.jre8.jar-2=C:\\Users\\MacBook\\Downloads\\mssql-jdbc-12.4.2.jre8.jar
+file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\naray\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\MacBook\\Downloads\\mysql-connector-j-8.2.0.jar
+file.reference.openpdf-1.3.30.jaspersoft.3.jar=C:\\Users\\naray\\Downloads\\jar_files\\openpdf-1.3.30.jaspersoft.3.jar
+file.reference.org-jdesktop-layout.jar=C:\\Users\\MacBook\\Downloads\\lib\\lib\\JasperReport\\org-jdesktop-layout.jar
+file.reference.stax2-api-4.2.1.jar=C:\\Users\\naray\\Downloads\\jar_files\\stax2-api-4.2.1.jar
+file.reference.woodstox-core-6.5.1.jar=C:\\Users\\naray\\Downloads\\jar_files\\woodstox-core-6.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.4.2.jre8.jar}:\
-    ${file.reference.mssql-jdbc-12.4.2.jre11.jar}
+    ${file.reference.mssql-jdbc-12.4.2.jre11.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre8.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.ecj-3.21.0.jar}:\
+    ${file.reference.jackson-annotations-2.15.3.jar}:\
+    ${file.reference.jackson-core-2.15.3.jar}:\
+    ${file.reference.jackson-databind-2.15.3.jar}:\
+    ${file.reference.jackson-dataformat-xml-2.15.3.jar}:\
+    ${file.reference.jasperreports-6.21.0.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.openpdf-1.3.30.jaspersoft.3.jar}:\
+    ${file.reference.stax2-api-4.2.1.jar}:\
+    ${file.reference.woodstox-core-6.5.1.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre8.jar-2}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.org-jdesktop-layout.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre11-javadoc.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre11-sources.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre11.jar-1}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre8-javadoc.jar}:\
+    ${file.reference.mssql-jdbc-12.4.2.jre8-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +116,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=18
-javac.target=18
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
